# kuka_experimental

./: .gitignore  .pre-commit-config.yaml  README.md  kuka_experimental.foxy.repos  kuka_experimental.rolling.repos
kuka_common_moveit/: CMakeLists.txt  package.xml
kuka_eki_motion_primitives_hw_interface/: CMakeLists.txt  README.md  kuka_eki_motion_primitives_hw_interface.xml  package.xml
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/: CMakeLists.txt  README.md
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/aip_common/: README.md
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/aip_common/include/aip/: common.h
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/aip_common/src/core/: Chrono.cpp  ChronoTime.cpp  LogLevel.cpp  Logger.cpp
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/aip_common/src/events/: Event.cpp
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/aip_common/src/tools/: IO.cpp  ThreadExecuter.cpp
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/aip_common/src/types/: Pose.cpp
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/include/aip/rbt/: Command.h  GripCommand.h  MetaCommand.h  MoveCommand.h  Robot.h  RobotMetaState.h  RobotState.h
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/src/: Command.cpp  GripCommand.cpp  MetaCommand.cpp  MoveCommand.cpp  Robot.cpp  RobotMetaState.cpp  RobotState.cpp
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/src/core/: CommandSequence.cpp  EKInterface.cpp  Types.cpp
kuka_eki_motion_primitives_hw_interface/aip_robot_interface/src/xml/: XmlReader.cpp  XmlWriter.cpp
kuka_eki_motion_primitives_hw_interface/eki_communication/: CMakeLists.txt
kuka_eki_motion_primitives_hw_interface/eki_communication/eki_common/: CMakeLists.txt
kuka_eki_motion_primitives_hw_interface/eki_communication/eki_common/include/eki_common/: Component.h  common.h
kuka_eki_motion_primitives_hw_interface/eki_communication/eki_common/src/core/: Chrono.cpp  ChronoTime.cpp  LogLevel.cpp  Logger.cpp
kuka_eki_motion_primitives_hw_interface/eki_communication/eki_common/src/events/: Event.cpp
kuka_eki_motion_primitives_hw_interface/eki_communication/eki_common/src/tools/: IO.cpp  ThreadExecuter.cpp
kuka_eki_motion_primitives_hw_interface/eki_communication/include/eki_communication/: Command.h  GripCommand.h  MetaCommand.h  MoveCommand.h  Robot.h  RobotMetaState.h  RobotState.h
kuka_eki_motion_primitives_hw_interface/eki_communication/krl/: aip_eki.src  aip_eki.xml  aip_meta_eki.sub  aip_meta_eki.xml  sps.sub
kuka_eki_motion_primitives_hw_interface/eki_communication/krl/old/: BinPickingConfig.xml  aip2_eki.xml  aip_eki.src  aip_meta_eki.src  aip_meta_eki.xml
kuka_eki_motion_primitives_hw_interface/eki_communication/src/: Command.cpp  GripCommand.cpp  MetaCommand.cpp  MoveCommand.cpp  Robot.cpp  RobotMetaState.cpp  RobotState.cpp
kuka_eki_motion_primitives_hw_interface/eki_communication/src/core/: CommandSequence.cpp  EKInterface.cpp  Types.cpp
kuka_eki_motion_primitives_hw_interface/eki_communication/src/xml/: XmlReader.cpp  XmlWriter.cpp
kuka_eki_motion_primitives_hw_interface/examples/: send_dummy_motion_primitives.py
kuka_eki_motion_primitives_hw_interface/include/kuka_eki_motion_primitives_hw_interface/: motion_primitives_kuka_driver.hpp  visibility_control.h
kuka_eki_motion_primitives_hw_interface/krl/: EkiHwInterface.xml  EkiIOInterface.xml  README.md  aip_eki.src  aip_eki.xml  aip_meta_eki.sub  kuka_eki_hw_interface.src  meta_eki.sub  meta_eki.xml  motion_eki.src  motion_eki.xml
kuka_eki_motion_primitives_hw_interface/src/: motion_primitives_kuka_driver.cpp
kuka_eki_motion_primitives_hw_interface/test/: test_motion_primitives_kuka_driver.cpp
kuka_ready2_educate_support/: CMakeLists.txt  package.xml
kuka_ready2_educate_support/launch/: test_ready2_educate.launch.py
kuka_ready2_educate_support/urdf/: multiple_ready2_educate.urdf  multiple_ready2_educate.xacro  ready2_educate_cell_macro.xacro  ready2_educate_macro.xacro
kuka_ros2_control_sim_support/: CMakeLists.txt  package.xml
kuka_ros2_control_sim_support/launch/: test_common_gazebo_classic_ros2_control.launch.py  test_common_gazebo_sim_ros2_control.launch.py
kuka_ros2_control_sim_support/test/: ros2_control_sim_support.py
kuka_ros2_control_sim_support/urdf/: common_sim_kuka.xacro
kuka_ros2_control_support/: CMakeLists.txt  package.xml
kuka_ros2_control_support/config/: 6dof_controllers.yaml  6dof_joint_trajectory_controller_goals.yaml  7dof_controllers.yaml  hka_maurob_jtc_goals.yaml
kuka_ros2_control_support/launch/: bringup.launch.py  bringup.launch.xml  hka_maurob_test_jtc.launch.py  load_description.launch.xml  motion_primitives_bringup.launch.py  motion_primitives_forward_bringup.launch.py  motion_primitives_from_traj_bringup.launch.py  rsi_simulator.launch.xml  test_bringup.launch.py  test_bringup.launch.xml  test_joint_trajectory_controller.launch.py  test_ros2_control_kuka.launch.py
kuka_ros2_control_support/src/: ros2_control_node_max_update_rate_sc.cpp  ros2_control_node_steady_clock.cpp
kuka_ros2_control_support/test/: ros2_control_support.py
kuka_ros2_control_support/urdf/: common_kuka.xacro  common_macro.ros2_control.xacro
kuka_rsi_hw_interface/: CMakeLists.txt  README.md  kuka_rsi_hw_interface.xml  package.xml
kuka_rsi_hw_interface/config/: hardware_controllers_7dof.yaml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.hpp  robot_control_interface.hpp  rsi_command.hpp  rsi_state.hpp  udp_server.hpp  visibility_control.hpp
kuka_rsi_hw_interface/krl/KR_C2/: ros_rsi.src
kuka_rsi_hw_interface/krl/KR_C4/: README.md  ros_rsi.rsi  ros_rsi.rsi.diagram  ros_rsi.rsi.xml
kuka_rsi_hw_interface/krl/KR_C4/KR_C4_8.6.x/: ros_rsi_XXX.rsix  ros_rsi_XXX.src  ros_rsi_XXX.xml
kuka_rsi_hw_interface/kuka_rsi_hw_interface/: send_joint_positions.py
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp  robot_control_interface.cpp
(+137 files in other folders)
