<?xml version="1.0"?>
<package format="3">
  <name>kuka_rsi_hw_interface</name>
  <version>0.1.0</version>
  <description>A ros2_control hardware interface for use with KUKA RSI communication protocol.</description>
  <author>Lars Tingelstad</author>
  <maintainer email="denis@stoglrobotics.de">Dr. Denis Štogl</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_rsi_hw_interface</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>tinyxml_vendor</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
